# petompp-web-api

./: Cargo.toml  Dockerfile  README.md  Rocket.toml
.github/workflows/: build-pull-request.yml  release.yml
api/: Cargo.toml  Rocket.toml  dockerfile
api/migrations/2023-07-28-181046_users/: up.sql
api/migrations/2023-08-24-182947_resources/: down.sql  up.sql
api/src/: error.rs  lib.rs  main.rs  schema.rs
api/src/auth/: claims.rs  error.rs  token.rs  validation.rs
api/src/controllers/: controller.rs  image.rs  mod.rs  resources.rs  users.rs
api/src/extensions/: extension.rs  mod.rs  rocket.rs
api/src/models/: credentials.rs  mod.rs  password.rs  role.rs  user.rs  user_name.rs
api/src/repositories/: mod.rs  pg.rs  query_config.rs  repo.rs
api/src/repositories/resources/: repo.rs
api/src/repositories/user/: mod.rs  query.rs  repo.rs
api/src/services/: azure_blob.rs  filename.rs  mod.rs
api/tests/controllers/: users_test.rs
migrations/2023-10-21-124208_blog/: down.sql  up.sql
migrations/2023-12-27-121724_register-settings/: down.sql  up.sql
src/: error.rs  lib.rs  main.rs  schema.rs
src/auth/: claims.rs  error.rs  mod.rs  token.rs
src/controllers/: blob.rs  blog.rs  blog_meta.rs  controller.rs  health.rs  image.rs  mod.rs  resources.rs  user_settings.rs  users.rs
src/models/: azure.rs  mod.rs  password.rs  resource_data.rs  role.rs  user.rs  user_name.rs  user_settings.rs
src/repositories/: mod.rs  query_config.rs
src/repositories/resources/: repo.rs
src/repositories/user/: repo.rs
src/repositories/user_settings/: repo.rs
src/services/: azure_blob.rs  azure_container.rs  azure_test.rs  mod.rs
