[package]
name = "petompp-web-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure_core = "0.15"
azure_storage = "0.15"
azure_storage_blobs = "0.15"
chrono = { version = "0.4", features = ["serde"] }
deref-derive = "0.1"
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "2.1"
hmac = "0.12"
jwt = "0.16"
lazy_static = "1.4"
num-traits = "0.2"
num-derive = "0.4"
r2d2 = "0.8"
regex = "1.9"
rocket = { version = "0.5.0-rc.3", features = ["json"] }
rocket_cors = "0.6.0-alpha2"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
strum = "0.25"
strum_macros = "0.25"
urandom = "0.1"
uuid = { version = "1.4", features = ["serde", "v4"] }
