[package]
name = "petompp-web-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono= "0.4"
hmac = "0.12"
jwt = "0.16"
rocket = {version = "0.5.0-rc.3", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
strum = "0.25"
strum_macros = "0.25"
urandom = "0.1"